sync 26th August. Responsive css is now added.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>beyondinfinity</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="beyondinfinity, an website" />
     <link rel="stylesheet" type="text/css" href="https://beyondinfinity.neocities.org/style.css" media="screen">
 </head>
