--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>beyondinfinity</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://beyondinfinity.neocities.org/style.css" media="screen">
 </head>
 
